--- a/wp-content/themes/rutgers/assets/src/css/inc/_variables.pcss
+++ b/wp-content/themes/rutgers/assets/src/css/inc/_variables.pcss
@@ -167,6 +167,7 @@ sp-sm  // 1rem - 16px;
 sp-base  // 1.5rem - 24px;
 sp-lg: // 2rem - 32px;
 sp-xl: // 2.5rem - 40px;
+sp-inner: // 2rem - 40px;
 
 
 - tailwind classes
